--- a/Application/Admin/View/Index/index1.html
+++ b/Application/Admin/View/Index/index1.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--360浏览器优先以webkit内核解析-->
-<title>乐鲜生后台系统</title>
+<title>章鱼帝后台系统</title>
 <link rel="shortcut icon" href="favicon.ico">
 <link href="__PUBLIC__/admin/css/bootstrap.min.css?v=3.3.5" rel="stylesheet">
 <link href="__PUBLIC__/admin/css/font-awesome.css?v=4.4.0" rel="stylesheet">
@@ -16,7 +16,7 @@
 <div class="row  border-bottom white-bg dashboard-header">
   <div class="col-sm-12">
     <blockquote class="text-warning" style="font-size:14px">
-      <h4 class="text-danger">欢迎使用乐鲜生后台系统</h4>
+      <h4 class="text-danger">欢迎使用章鱼帝后台系统</h4>
     </blockquote>
     <hr>
   </div>
