--- a/Application/Admin/View/Login/index.html
+++ b/Application/Admin/View/Login/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>乐鲜生后台系统管理登录</title>
-    <meta name="keywords" content="乐鲜生后台系统管理登录">
-    <meta name="description" content="乐鲜生后台系统管理登录">
+    <title>章鱼帝后台系统管理登录</title>
+    <meta name="keywords" content="章鱼帝后台系统管理登录">
+    <meta name="description" content="章鱼帝后台系统管理登录">
 
     <link rel="shortcut icon" href="favicon.ico"> <link href="__PUBLIC__/admin/css/bootstrap.min.css?v=3.3.5" rel="stylesheet">
     <link href="__PUBLIC__/admin/css/font-awesome.css?v=4.4.0" rel="stylesheet">
@@ -23,9 +23,9 @@
     <div class="middle-box text-center loginscreen  animated fadeInDown">
         <div>
             <div>
-                <h1 class="logo-name">鲜</h1>
+                <h1 class="logo-name">帝</h1>
             </div>
-            <h3>欢迎使用 乐鲜生</h3>
+            <h3>欢迎使用 章鱼帝</h3>
 
             <form class="m-t" target="_self" role="form" method="post" action="{:U('login/post')}">
                 <div class="form-group">
