--- a/Application/Admin/View/Users/index.html
+++ b/Application/Admin/View/Users/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>微信用户管理-美联美客后台系统</title>
-    <meta name="keywords" content="微信用户管理">
-    <meta name="description" content="微信用户管理">
+    <title>用户管理-章鱼帝后台系统</title>
+    <meta name="keywords" content="用户管理">
+    <meta name="description" content="用户管理">
     <link rel="shortcut icon" href="favicon.ico">
     <link href="__PUBLIC__/css/bootstrap.min.css?v=3.3.5" rel="stylesheet">
     <link href="__PUBLIC__/css/font-awesome.css?v=4.4.0" rel="stylesheet">
@@ -21,7 +21,7 @@
         <div class="col-sm-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>微信用户列表</h5>
+                    <h5>用户列表</h5>
                     <!--
                     <div class="ibox-tools"> <a class="collapse-link"> <i class="fa fa-chevron-up"></i> </a> <a class="dropdown-toggle" data-toggle="dropdown" href="table_data_tables.html#"> <i class="fa fa-wrench"></i> </a>
                       <ul class="dropdown-menu dropdown-user">
