--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -4,9 +4,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="renderer" content="webkit">
-<title>美联美客后台管理系统</title>
-<meta name="keywords" content="H+后台主题,后台bootstrap框架,会员中心主题,后台HTML,响应式后台">
-<meta name="description" content="H+是一个完全响应式，基于Bootstrap3最新版本开发的扁平化主题，她采用了主流的左右两栏式布局，使用了Html5+CSS3等现代技术">
+<title>章鱼帝后台管理系统</title>
+<meta name="keywords" content="章鱼帝后台管理系统">
+<meta name="description" content="章鱼帝后台管理系统">
 <!--[if lt IE 8]>
     <meta http-equiv="refresh" content="0;ie.html" />
     <![endif]-->
@@ -122,7 +122,7 @@
       <iframe class="J_iframe" name="iframe0" width="100%" height="100%" src="{:U('index/index1')}" frameborder="0" data-id="{:U('index/index1')}" seamless></iframe>
     </div>
     <div class="footer">
-      <div class="pull-right">&copy; 2015-2016 <a href="http://www.baidu.com/" target="_blank">乐鲜生</a> </div>
+      <div class="pull-right">&copy; 2015-2016 <a href="http://www.baidu.com/" target="_blank">章鱼帝</a> </div>
     </div>
   </div>
   <!--右侧部分结束-->
