--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -42,10 +42,10 @@
             <li> <a class="J_menuItem" href="{:U('admin/set')}">网站设置</a> </li>
               <li> <a class="J_menuItem" href="{:U('admin/del')}">清运行缓存</a> </li>
           </ul>
-        </li>   <li> <a href="#"> <i class="fa fa-home"></i> <span class="nav-label">兑换商品</span> <span class="fa arrow"></span> </a>
+        </li>   <li> <a href="#"> <i class="fa fa-home"></i> <span class="nav-label">赛事列表</span> <span class="fa arrow"></span> </a>
           <ul class="nav nav-second-level">
-            <li> <a class="J_menuItem" href="{:U('goods/index')}">商品列表</a> </li>
-            <li> <a class="J_menuItem" href="{:U('goods/exchange')}">兑换记录</a> </li>
+            <li> <a class="J_menuItem" href="{:U('game/index')}">赛事列表</a> </li>
+            <li> <a class="J_menuItem" href="{:U('game/exchange')}">兑换记录</a> </li>
           </ul>
         </li>
  <!--       <li> <a class="J_menuItem" href="layouts.html"><i class="fa fa-columns"></i> <span class="nav-label">用户管理</span></a> </li> -->
@@ -122,7 +122,7 @@
       <iframe class="J_iframe" name="iframe0" width="100%" height="100%" src="{:U('index/index1')}" frameborder="0" data-id="{:U('index/index1')}" seamless></iframe>
     </div>
     <div class="footer">
-      <div class="pull-right">&copy; 2015-2016 <a href="http://www.baidu.com/" target="_blank">章鱼帝</a> </div>
+      <div class="pull-right">&copy; 2015-2016 <a href="http://zyd.kakaapp.com/" target="_blank">章鱼帝</a> </div>
     </div>
   </div>
   <!--右侧部分结束-->
