--- a/Application/Admin/View/Game/edit.html
+++ b/Application/Admin/View/Game/edit.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>用户编辑</title>
-<meta name="keywords" content="用户编辑">
-<meta name="description" content="用户编辑">
+<title>赛事编辑</title>
+<meta name="keywords" content="赛事编辑">
+<meta name="description" content="赛事编辑">
 <link rel="shortcut icon" href="favicon.ico">
 <link href="__PUBLIC__/admin/css/bootstrap.min.css?v=3.3.5" rel="stylesheet">
 <link href="__PUBLIC__/admin/css/font-awesome.css?v=4.4.0" rel="stylesheet">
@@ -21,24 +21,24 @@
   <div class="row">
     <div class="col-sm-12">
       <div class="ibox float-e-margins">
-          <div class=""> <a href="{:U('/users/index')}" target="_self" class="btn btn-primary ">返回</a> </div>
+          <div class=""> <a href="{:U('game/index')}" target="_self" class="btn btn-primary ">返回</a> </div>
         <div class="ibox-title">
-          <h5><a href="{:U('/users/index')}"> 用户编辑</a> > <small>用户编辑</small></h5>
+          <h5><a href="{:U('game/index')}"> 赛事管理</a> > <small>赛事编辑</small></h5>
           <div class="ibox-tools">
               <a class="collapse-link"> <i class="fa fa-chevron-up"></i> </a>
    </div>
         </div>
         <div class="ibox-content">
-          <form method="post" name="edit" target="_self" action="{:U('/users/edit')}" class="form-horizontal">
-              <input type="hidden" name="id" value="{$user.id}" />
+          <form method="post" name="edit" target="_self" action="{:U('game/edit')}" class="form-horizontal">
+              <input type="hidden" name="id" value="{$game.id}" />
             <div class="form-group">
-              <label class="col-sm-2 control-label">用户昵称：</label>
+              <label class="col-sm-2 control-label">赛事名称：</label>
               <div class="col-sm-10">
-                <input type="text" name="city_name" value="{$user.city_name}" class="form-control">
+                <input type="text" name="uname" value="{$game.name}" class="form-control">
               </div>
             </div>
-            <div class="hr-line-dashed"></div>
 
+              <div class="hr-line-dashed"></div>
             <div class="form-group">
               <div class="col-sm-4 col-sm-offset-2">
                 <button class="btn btn-primary" type="submit">保存内容</button>
