--- a/Application/Admin/View/Game/forecast.html
+++ b/Application/Admin/View/Game/forecast.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>用户管理-章鱼帝后台系统</title>
-    <meta name="keywords" content="用户管理">
-    <meta name="description" content="用户管理">
+    <title>赛事管理-后台系统</title>
+    <meta name="keywords" content="赛事管理">
+    <meta name="description" content="赛事管理">
     <link rel="shortcut icon" href="favicon.ico">
     <link href="__PUBLIC__/admin/css/bootstrap.min.css?v=3.3.5" rel="stylesheet">
     <link href="__PUBLIC__/admin/css/font-awesome.css?v=4.4.0" rel="stylesheet">
@@ -21,7 +21,7 @@
         <div class="col-sm-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>用户列表</h5>
+                    <h5>赛事管理</h5>
                     <!--
                     <div class="ibox-tools"> <a class="collapse-link"> <i class="fa fa-chevron-up"></i> </a> <a class="dropdown-toggle" data-toggle="dropdown" href="table_data_tables.html#"> <i class="fa fa-wrench"></i> </a>
                       <ul class="dropdown-menu dropdown-user">
@@ -31,25 +31,18 @@
                       <a class="close-link"> <i class="fa fa-times"></i> </a> </div>
                   </div>-->
                     <div class="ibox-content">
-                        <!--<div class=""> <a href="{:U('/city/edit')}" target="_self" class="btn btn-primary ">添加公众号</a> </div>-->
+                        <!--<div class=""> <a href="{:U('game/edit')}" target="_self" class="btn btn-primary ">添加用户</a> </div>-->
                         <div class="table-responsive">
                             <table class="table table-striped table-bordered table-hover" id="editable">
                                 <thead>
                                 <tr>
-                                    <th>用户ID</th>
-                                    <th>用户手机</th>
-                                    <th>用户昵称</th>
+                                    <th>预测ID</th>
+                                    <th>预测用户</th>
                                     <th>是否专家</th>
-                                    <th>发布预测数</th>
-                                    <th>购买预测数</th>
-                                    <th>被购买预测数</th>
-                                    <th>被关注数</th>
-                                    <th>关注数</th>
-                                    <th>账户余额</th>
-                                    <th>总收益</th>
-                                    <th>总体现</th>
-                                    <th>创建时间</th>
-                                    <th>上次访问时间</th>
+                                    <th>赛事名称</th>
+                                    <th>预测情况</th>
+                                    <th>比赛时间</th>
+                                    <th>状态</th>
                                     <th>操作</th>
                                 </tr>
                                 </thead>
@@ -57,21 +50,14 @@
                                 <volist name="list" id="item">
                                     <tr class="gradeX">
                                         <td>{$item.id}</td>
-                                        <td>{$item.unionid}</td>
-                                        <td>{$item.unionid}</td>
-                                        <td>{$item.openid}</td>
-                                        <td>{$item.cityid}</td>
-                                        <td>{$item.wx_name}</td>
-                                        <td>{$item.cityid}</td>
-                                        <td>{$item.cityid}</td>
-                                        <td>{$item.cityid}</td>
-                                        <td>{$item.cityid}</td>
-                                        <td>{$item.cityid}</td>
-                                        <td><img src="{$item.wx_pic}" width="30"></td>
-                                        <td>{:userSubscribeMap($item['is_subscribe'])}</td>
-                                        <td>{:timestampToDate($item['create_time'])}</td>
+                                        <td>{$item.uname}</td>
+                                        <td>{$item.uname}</td>
+                                        <td>{$item.uname}</td>
+                                        <td>{$item.uname}</td>
+                                        <td>{$item.last_login_time|date="Y-m-d H:i:s",###}</td>
+                                        <td><if condition="$item[status] eq 1">正常<else/>锁定</if></td>
                                         <td class="center">
-                                            <a href="{:U('/users/userview', ['id' => $item['id']])}"><i class="fa fa-check text-navy"></i>详细</a>
+                                            <a href="{:U('admin/edit', ['id' => $item['id']])}"><i class="fa fa-check text-navy"></i>编辑</a>
                                         </td>
                                     </tr>
                                 </volist>
@@ -121,15 +107,7 @@
 //            });
     });
 
-    function fnClickAddRow() {
-        $('#editable').dataTable().fnAddData([
-            "Custom row",
-            "New row",
-            "New row",
-            "New row",
-            "New row"
-        ]);
-    }
+
 </script>
 </body>
 </html>
