--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -45,14 +45,14 @@
         </li>   <li> <a href="#"> <i class="fa fa-home"></i> <span class="nav-label">赛事列表</span> <span class="fa arrow"></span> </a>
           <ul class="nav nav-second-level">
             <li> <a class="J_menuItem" href="{:U('game/index')}">赛事列表</a> </li>
-            <li> <a class="J_menuItem" href="{:U('game/exchange')}">兑换记录</a> </li>
+            <li> <a class="J_menuItem" href="{:U('game/forecast')}">赛事预测</a> </li>
           </ul>
         </li>
  <!--       <li> <a class="J_menuItem" href="layouts.html"><i class="fa fa-columns"></i> <span class="nav-label">用户管理</span></a> </li> -->
         <li> <a href="#"> <i class="fa fa fa-bar-chart-o"></i> <span class="nav-label">用户管理</span> <span class="fa arrow"></span> </a>
           <ul class="nav nav-second-level">
             <li> <a class="J_menuItem" href="{:U('users/index')}">用户列表</a> </li>
-            <li> <a class="J_menuItem" href="{:U('sign/index')}">支持列表</a> </li>
+            <li> <a class="J_menuItem" href="{:U('users/log')}">购买流水</a> </li>
           </ul>
         </li>
 
