--- a/Application/Admin/View/Users/log.html
+++ b/Application/Admin/View/Users/log.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>用户管理-章鱼帝后台系统</title>
-    <meta name="keywords" content="用户管理">
-    <meta name="description" content="用户管理">
+    <title>预测购买流水-章鱼帝后台系统</title>
+    <meta name="keywords" content="预测购买流水">
+    <meta name="description" content="预测购买流水">
     <link rel="shortcut icon" href="favicon.ico">
     <link href="__PUBLIC__/admin/css/bootstrap.min.css?v=3.3.5" rel="stylesheet">
     <link href="__PUBLIC__/admin/css/font-awesome.css?v=4.4.0" rel="stylesheet">
@@ -21,7 +21,7 @@
         <div class="col-sm-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>用户列表</h5>
+                    <h5>预测购买流水</h5>
                     <!--
                     <div class="ibox-tools"> <a class="collapse-link"> <i class="fa fa-chevron-up"></i> </a> <a class="dropdown-toggle" data-toggle="dropdown" href="table_data_tables.html#"> <i class="fa fa-wrench"></i> </a>
                       <ul class="dropdown-menu dropdown-user">
@@ -36,20 +36,14 @@
                             <table class="table table-striped table-bordered table-hover" id="editable">
                                 <thead>
                                 <tr>
-                                    <th>用户ID</th>
-                                    <th>用户手机</th>
-                                    <th>用户昵称</th>
-                                    <th>是否专家</th>
-                                    <th>发布预测数</th>
-                                    <th>购买预测数</th>
-                                    <th>被购买预测数</th>
-                                    <th>被关注数</th>
-                                    <th>关注数</th>
-                                    <th>账户余额</th>
-                                    <th>总收益</th>
-                                    <th>总体现</th>
-                                    <th>创建时间</th>
-                                    <th>上次访问时间</th>
+                                    <th>流水ID</th>
+                                    <th>购买用户</th>
+                                    <th>预测用户</th>
+                                    <th>预测赛事</th>
+                                    <th>购买金额</th>
+                                    <th>预测情况</th>
+                                    <th>购买时间</th>
+                                    <th>购买结果</th>
                                     <th>操作</th>
                                 </tr>
                                 </thead>
@@ -60,12 +54,6 @@
                                         <td>{$item.unionid}</td>
                                         <td>{$item.unionid}</td>
                                         <td>{$item.openid}</td>
-                                        <td>{$item.cityid}</td>
-                                        <td>{$item.wx_name}</td>
-                                        <td>{$item.cityid}</td>
-                                        <td>{$item.cityid}</td>
-                                        <td>{$item.cityid}</td>
-                                        <td>{$item.cityid}</td>
                                         <td>{$item.cityid}</td>
                                         <td><img src="{$item.wx_pic}" width="30"></td>
                                         <td>{:userSubscribeMap($item['is_subscribe'])}</td>
