--- a/Application/Admin/View/Admin/set.html
+++ b/Application/Admin/View/Admin/set.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>公众号编辑</title>
-<meta name="keywords" content="公众号编辑">
-<meta name="description" content="公众号编辑">
+<title>系统编辑</title>
+<meta name="keywords" content="系统编辑">
+<meta name="description" content="系统编辑">
 <link rel="shortcut icon" href="favicon.ico">
 <link href="__PUBLIC__/admin/css/bootstrap.min.css?v=3.3.5" rel="stylesheet">
 <link href="__PUBLIC__/admin/css/font-awesome.css?v=4.4.0" rel="stylesheet">
@@ -30,55 +30,15 @@
         </div>
         <div class="ibox-content">
           <form method="post" name="edit" target="_self" action="{:U('admin/set')}" class="form-horizontal">
-            <div class="form-group">
-              <label class="col-sm-2 control-label">AppId：</label>
-              <div class="col-sm-10">
-                <input type="text" name="config[weixin][appid]" value="{$config.weixin.appid}" class="form-control">
-              </div>
-            </div>
-          <div class="hr-line-dashed"></div>
 
               <div class="form-group">
-                  <label class="col-sm-2 control-label">Appsecret：</label>
+                  <label class="col-sm-2 control-label">Api密钥：</label>
                   <div class="col-sm-10">
-                      <input type="text" name="config[weixin][appsecret]" value="{$config.weixin.appsecret}" class="form-control">
+                      <input type="text" name="config[api][pay_key]" value="{$config.api.pay_key}" class="form-control">
                   </div>
               </div>
               <div class="hr-line-dashed"></div>
-              <div class="form-group">
-                  <label class="col-sm-2 control-label">token值：</label>
-                  <div class="col-sm-10">
-                      <input type="text" name="config[weixin][token]" value="{$config.weixin.token}" class="form-control">
-                  </div>
-              </div>
-              <div class="hr-line-dashed"></div>
-              <div class="form-group">
-                  <label class="col-sm-2 control-label">Encoding值：</label>
-                  <div class="col-sm-10">
-                      <input type="text" name="config[weixin][encoding]" value="{$config.weixin.encoding}" class="form-control">
-                  </div>
-              </div>
-              <div class="hr-line-dashed"></div>
-              <div class="form-group">
-                  <label class="col-sm-2 control-label">商户号：</label>
-                  <div class="col-sm-10">
-                      <input type="text" name="config[weixin][mchid]" value="{$config.weixin.mchid}" class="form-control">
-                  </div>
-              </div>
-              <div class="hr-line-dashed"></div>
-              <div class="form-group">
-                  <label class="col-sm-2 control-label">支付密钥：</label>
-                  <div class="col-sm-10">
-                      <input type="text" name="config[weixin][pay_key]" value="{$config.weixin.pay_key}" class="form-control">
-                  </div>
-              </div>
-              <div class="hr-line-dashed"></div><div class="form-group">
-              <label class="col-sm-2 control-label">关注链接：</label>
-              <div class="col-sm-10">
-                  <input type="text" name="config[weixin][jump_url]" value="{$config.weixin.jump_url}" class="form-control">
-              </div>
-          </div>
-              <div class="hr-line-dashed"></div>
+
               <div class="form-group">
               <div class="col-sm-4 col-sm-offset-2">
                 <button class="btn btn-primary" type="submit">保存内容</button>
