--- a/Application/Admin/View/Admin/set.html
+++ b/Application/Admin/View/Admin/set.html
@@ -23,7 +23,7 @@
       <div class="ibox float-e-margins">
           <div class=""> <a href="{:U('admin/index')}" target="_self" class="btn btn-primary ">返回</a> </div>
         <div class="ibox-title">
-          <h5><a href="{:U('admin/index')}"> 系统用户管理</a> > <small>网站设置</small></h5>
+          <h5><a href="{:U('admin/index')}"> 系统管理</a> > <small>网站设置</small></h5>
           <div class="ibox-tools">
               <a class="collapse-link"> <i class="fa fa-chevron-up"></i> </a>
    </div>
