--- a/Application/Admin/View/Admin/set.html
+++ b/Application/Admin/View/Admin/set.html
@@ -34,7 +34,7 @@
               <div class="form-group">
                   <label class="col-sm-2 control-label">Api密钥：</label>
                   <div class="col-sm-10">
-                      <input type="text" name="config[api][pay_key]" value="{$config.api.pay_key}" class="form-control">
+                      <input type="text" name="config[api][api_key]" value="{$config.api.api_key}" class="form-control">
                   </div>
               </div>
               <div class="hr-line-dashed"></div>
