--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -42,10 +42,17 @@
             <li> <a class="J_menuItem" href="{:U('admin/set')}">网站设置</a> </li>
               <li> <a class="J_menuItem" href="{:U('admin/del')}">清运行缓存</a> </li>
           </ul>
-        </li>   <li> <a href="#"> <i class="fa fa-home"></i> <span class="nav-label">赛事列表</span> <span class="fa arrow"></span> </a>
+        </li>
+        <li> <a href="#"> <i class="fa fa-home"></i> <span class="nav-label">赛事管理</span> <span class="fa arrow"></span> </a>
           <ul class="nav nav-second-level">
-            <li> <a class="J_menuItem" href="{:U('game/index')}">赛事列表</a> </li>
-            <li> <a class="J_menuItem" href="{:U('game/forecast')}">赛事预测</a> </li>
+            <li> <a class="J_menuItem" href="{:U('match/index')}">赛事列表</a> </li>
+            <li> <a class="J_menuItem" href="{:U('match/forecast')}">赛事预测</a> </li>
+          </ul>
+        </li>
+        <li> <a href="#"> <i class="fa fa-home"></i> <span class="nav-label">竞彩列表</span> <span class="fa arrow"></span> </a>
+          <ul class="nav nav-second-level">
+            <li> <a class="J_menuItem" href="{:U('sporttery/index')}">竞彩列表</a> </li>
+            <li> <a class="J_menuItem" href="{:U('sporttery/log')}">同步数据</a> </li>
           </ul>
         </li>
  <!--       <li> <a class="J_menuItem" href="layouts.html"><i class="fa fa-columns"></i> <span class="nav-label">用户管理</span></a> </li> -->
