--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -55,6 +55,15 @@
             <li> <a class="J_menuItem" href="{:U('sporttery/log')}">同步数据</a> </li>
           </ul>
         </li>
+        <li> <a href="#"> <i class="fa fa-home"></i> <span class="nav-label">基础信息</span> <span class="fa arrow"></span> </a>
+          <ul class="nav nav-second-level">
+            <li> <a class="J_menuItem" href="{:U('/index')}">联赛列表</a> </li>
+            <li> <a class="J_menuItem" href="{:U('sporttery/log')}">球队列表</a> </li>
+            <li> <a class="J_menuItem" href="{:U('sporttery/log')}">球员列表</a> </li>
+            <li> <a class="J_menuItem" href="{:U('sporttery/log')}">裁判列表</a> </li>
+          </ul>
+        </li>
+
  <!--       <li> <a class="J_menuItem" href="layouts.html"><i class="fa fa-columns"></i> <span class="nav-label">用户管理</span></a> </li> -->
         <li> <a href="#"> <i class="fa fa fa-bar-chart-o"></i> <span class="nav-label">用户管理</span> <span class="fa arrow"></span> </a>
           <ul class="nav nav-second-level">
