--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -57,7 +57,7 @@
         </li>
         <li> <a href="#"> <i class="fa fa-home"></i> <span class="nav-label">基础信息</span> <span class="fa arrow"></span> </a>
           <ul class="nav nav-second-level">
-            <li> <a class="J_menuItem" href="{:U('/index')}">联赛列表</a> </li>
+            <li> <a class="J_menuItem" href="{:U('/basic/league')}">联赛列表</a> </li>
             <li> <a class="J_menuItem" href="{:U('sporttery/log')}">球队列表</a> </li>
             <li> <a class="J_menuItem" href="{:U('sporttery/log')}">球员列表</a> </li>
             <li> <a class="J_menuItem" href="{:U('sporttery/log')}">裁判列表</a> </li>
