--- a/Application/Admin/View/Basic/league.html
+++ b/Application/Admin/View/Basic/league.html
@@ -31,15 +31,19 @@
                       <a class="close-link"> <i class="fa fa-times"></i> </a> </div>
                   </div>-->
                     <div class="ibox-content">
-                        <div class=""> <a href="{:U('admin/edit')}" target="_self" class="btn btn-primary ">添加用户</a> </div>
+                        <!--<div class=""> <a href="{:U('basic/league_edit')}" target="_self" class="btn btn-primary ">添加用户</a> </div>-->
                         <div class="table-responsive">
                             <table class="table table-striped table-bordered table-hover" id="editable">
                                 <thead>
                                 <tr>
-                                    <th>用户ID</th>
-                                    <th>用户名</th>
-                                    <th>上次登录</th>
-                                    <th>状态</th>
+                                    <th>联赛ID</th>
+                                    <th>联赛名称</th>
+                                    <th>联赛类型</th>
+                                    <th>总伦次</th>
+                                    <th>当前轮</th>
+                                    <th>当前赛季</th>
+                                    <th>所属国家</th>
+                                    <th>所属区域</th>
                                     <th>操作</th>
                                 </tr>
                                 </thead>
@@ -48,10 +52,14 @@
                                     <tr class="gradeX">
                                         <td>{$item.league_id}</td>
                                         <td>{$item.cn_name}</td>
-                                        <td>{$item.last_login_time|date="Y-m-d H:i:s",###}</td>
-                                        <td><if condition="$item[status] eq 1">正常<else/>锁定</if></td>
+                                        <td><if condition="$item.type eq 1">联赛<else/>杯赛</if></td>
+                                        <td>{$item.sum_round}</td>
+                                        <td>{$item.curr_round}</td>
+                                        <td>{$item.curr_match_season}</td>
+                                        <td>{$item.country_name}</td>
+                                        <td>{:getAreaName($item[area_id])}</td>
                                         <td class="center">
-                                            <a href="{:U('admin/edit', ['id' => $item['id']])}"><i class="fa fa-check text-navy"></i>编辑</a>
+                                            <a href="{:U('basic/league_edit', ['id' => $item['id']])}"><i class="fa fa-check text-navy"></i>详情</a>
                                         </td>
                                     </tr>
                                 </volist>
