--- a/Application/Admin/View/Basic/league.html
+++ b/Application/Admin/View/Basic/league.html
@@ -59,7 +59,7 @@
                                         <td>{$item.country_name}</td>
                                         <td>{:getAreaName($item[area_id])}</td>
                                         <td class="center">
-                                            <a href="{:U('basic/league_edit', ['id' => $item['id']])}"><i class="fa fa-check text-navy"></i>详情</a>
+                                            <a href="{:U('basic/league_edit', ['id' => $item['league_id']])}"><i class="fa fa-check text-navy"></i>详情</a>
                                         </td>
                                     </tr>
                                 </volist>
