--- a/Application/Home/View/Response/index.html
+++ b/Application/Home/View/Response/index.html
@@ -73,7 +73,7 @@
                 data:{username:username, contact:contact, content:content,sign:sign},
                 success: function (data) {
                     if(data.state == 1){
-                        layer.msg('感谢您的反馈信息~', function(){});
+                        layer.msg('感谢您的反馈信息~');
                         return false;
                     }else{
                         layer.msg(data.msg, function(){});
