--- a/Application/Home/View/Response/index.html
+++ b/Application/Home/View/Response/index.html
@@ -16,12 +16,12 @@
             <input type="hidden" name="sign" value="{$sign}" />
 		<ul>
 			<div class="row" >
-				<input class="fl color_999 tl text"  name="username"  id="username"  placeholder="用户名" />
+				<input class="fl color_999 tl text" style="width: 100%;" name="username"  id="username"  placeholder="用户名" />
 			</div>
 		</ul>
             <ul>
                 <div class="row" >
-                    <input class="fl color_999 tl text"  name="contact"  id="contact"  placeholder="联系方式" />
+                    <input class="fl color_999 tl text"  style="width: 100%;"  name="contact"  id="contact"  placeholder="联系方式" />
                 </div>
             </ul>
             <ul>
