--- a/Application/Home/View/Response/index.html
+++ b/Application/Home/View/Response/index.html
@@ -4,7 +4,7 @@
     onload = function() {
         if (!document.all)
         {
-            document.forms['theForm'].reset();
+           //  document.forms['theForm'].reset();
         }
     }
 
