--- a/Application/Home/View/Response/index.html
+++ b/Application/Home/View/Response/index.html
@@ -79,7 +79,7 @@
                     if(data.state == 1){
                         $('input[name="username"]').val('')
                         $('input[name="contact"]').val('')
-                        $('input[textarea="content"]').val('')
+                        $('textarea[name="content"]').val('')
                         layer.msg('感谢您的反馈信息~');
                         // setTimeout(function(){window.location.reload()},2000);
                         return false;
