--- a/Application/Admin/View/Basic/team.html
+++ b/Application/Admin/View/Basic/team.html
@@ -49,6 +49,7 @@
                                 <volist name="list" id="item">
                                     <tr class="gradeX">
                                         <td>{$item.team_id}</td>
+                                        <td>{$item.cn_name}</td>
                                         <td>{$item.league_id}</td>
                                         <td>{:strval($item[found])}</td>
                                         <td>{:strval($item[area])}</td>
