--- a/Application/Admin/View/Basic/referee.html
+++ b/Application/Admin/View/Basic/referee.html
@@ -50,10 +50,10 @@
                                         <td>{$item.referee_id}</td>
                                         <td>{$item.cn_name}</td>
                                         <td><if condition="$item.type_id eq 1">主裁判<elseif condition="$item.type_id eq 2" />助理裁判<else/>第四官员</if></td>
-                                        <td><if condition="empty($item.country)"><else />{$item.country}</if></td>
-                                        <td><if condition="empty($item.birthday)"><else />{$item.birthday}</if></td>
+                                        <td><if condition="empty($item[country])"><else />{$item.country}</if></td>
+                                        <td><if condition="empty($item[birthday])"><else />{$item.birthday}</if></td>
                                         <td class="center">
-                                            <a href="{:U('basic/league_edit', ['id' => $item['league_id']])}"><i class="fa fa-check text-navy"></i>详情</a>
+                                            <a href="{:U('basic/referee_edit', ['id' => $item['referee_id']])}"><i class="fa fa-check text-navy"></i>详情</a>
                                         </td>
                                     </tr>
                                 </volist>
