--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -51,8 +51,15 @@
         </li>
         <li> <a href="#"> <i class="fa fa-home"></i> <span class="nav-label">竞彩列表</span> <span class="fa arrow"></span> </a>
           <ul class="nav nav-second-level">
-            <li> <a class="J_menuItem" href="{:U('sporttery/index')}">竞彩列表</a> </li>
-            <li> <a class="J_menuItem" href="{:U('sporttery/log')}">同步数据</a> </li>
+            <li> <a class="J_menuItem" href="{:U('sporttery/yapei')}">亚赔(让球盘)</a> </li>
+            <li> <a class="J_menuItem" href="{:U('sporttery/oupei')}">欧赔(标准盘)</a> </li>
+            <li> <a class="J_menuItem" href="{:U('sporttery/daxiaoqiu')}">大小球</a> </li>
+            <li> <a class="J_menuItem" href="{:U('sporttery/half')}">半场让球</a> </li>
+            <li> <a class="J_menuItem" href="{:U('sporttery/half_daxiaoqiu')}">半场大小球</a> </li>
+            <li> <a class="J_menuItem" href="{:U('sporttery/jingcai')}">竞彩</a> </li>
+            <li> <a class="J_menuItem" href="{:U('sporttery/beidan')}">北单</a> </li>
+            <li> <a class="J_menuItem" href="{:U('sporttery/baiou')}">佰欧</a> </li>
+            <li> <a class="J_menuItem" href="{:U('sporttery/jiaoqiu')}">角球</a> </li>
           </ul>
         </li>
         <li> <a href="#"> <i class="fa fa-home"></i> <span class="nav-label">基础信息</span> <span class="fa arrow"></span> </a>
