--- a/Application/Admin/View/Sporttery/baiou.html
+++ b/Application/Admin/View/Sporttery/baiou.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>欧赔赔率(标准盘)-后台系统</title>
-    <meta name="keywords" content="欧赔赔率">
-    <meta name="description" content="欧赔赔率">
+    <title>佰欧赔率-后台系统</title>
+    <meta name="keywords" content="佰欧赔率">
+    <meta name="description" content="佰欧赔率">
     <link rel="shortcut icon" href="favicon.ico">
     <link href="__PUBLIC__/admin/css/bootstrap.min.css?v=3.3.5" rel="stylesheet">
     <link href="__PUBLIC__/admin/css/font-awesome.css?v=4.4.0" rel="stylesheet">
@@ -21,7 +21,7 @@
         <div class="col-sm-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>欧赔赔率(标准盘)</h5>
+                    <h5>佰欧赔率</h5>
                     <!--
                     <div class="ibox-tools"> <a class="collapse-link"> <i class="fa fa-chevron-up"></i> </a> <a class="dropdown-toggle" data-toggle="dropdown" href="table_data_tables.html#"> <i class="fa fa-wrench"></i> </a>
                       <ul class="dropdown-menu dropdown-user">
@@ -52,12 +52,12 @@
                                     <tr class="gradeX">
                                         <td>{$item.match_id}</td>
                                         <td>{:getCompanyName($item[company_id])}</td>
-                                        <td>{$item.begin_home_rate}</td>
-                                        <td>{$item.begin_draw_rate}</td>
-                                        <td>{$item.begin_away_rate}</td>
-                                        <td>{$item.change_home_rate}</td>
-                                        <td>{$item.change_draw_rate}</td>
-                                        <td>{$item.change_away_rate}</td>
+                                        <td>{$item.begin_home_win}</td>
+                                        <td>{$item.begin_draw}</td>
+                                        <td>{$item.begin_away_win}</td>
+                                        <td>{$item.change_home_win}</td>
+                                        <td>{$item.change_draw}</td>
+                                        <td>{$item.change_away_win}</td>
                                         <td class="center">
                                         </td>
                                     </tr>
