--- a/Application/Admin/View/Sporttery/half.html
+++ b/Application/Admin/View/Sporttery/half.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>亚赔赔率(让球盘)-后台系统</title>
-    <meta name="keywords" content="亚赔赔率">
-    <meta name="description" content="亚赔赔率">
+    <title>半场让球-后台系统</title>
+    <meta name="keywords" content="半场让球">
+    <meta name="description" content="半场让球">
     <link rel="shortcut icon" href="favicon.ico">
     <link href="__PUBLIC__/admin/css/bootstrap.min.css?v=3.3.5" rel="stylesheet">
     <link href="__PUBLIC__/admin/css/font-awesome.css?v=4.4.0" rel="stylesheet">
@@ -21,7 +21,7 @@
         <div class="col-sm-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>亚赔赔率(让球盘)</h5>
+                    <h5>半场让球</h5>
                     <!--
                     <div class="ibox-tools"> <a class="collapse-link"> <i class="fa fa-chevron-up"></i> </a> <a class="dropdown-toggle" data-toggle="dropdown" href="table_data_tables.html#"> <i class="fa fa-wrench"></i> </a>
                       <ul class="dropdown-menu dropdown-user">
