--- a/Application/Admin/View/Sporttery/baiou.html
+++ b/Application/Admin/View/Sporttery/baiou.html
@@ -55,9 +55,9 @@
                                         <td>{$item.begin_home_win}</td>
                                         <td>{$item.begin_draw}</td>
                                         <td>{$item.begin_away_win}</td>
-                                        <td>{$item.change_home_win}</td>
-                                        <td>{$item.change_draw}</td>
-                                        <td>{$item.change_away_win}</td>
+                                        <td>{$item.home_win}</td>
+                                        <td>{$item.draw_win}</td>
+                                        <td>{$item.away_win}</td>
                                         <td class="center">
                                         </td>
                                     </tr>
