--- a/Application/Admin/View/Sporttery/daxiaoqiu.html
+++ b/Application/Admin/View/Sporttery/daxiaoqiu.html
@@ -53,7 +53,7 @@
                                         <td>{$item.match_id}</td>
                                         <td>{:getCompanyName($item[company_id])}</td>
                                         <td>{$item.begin_rate}</td>
-                                        <td>{$item.begin_bog_rate}</td>
+                                        <td>{$item.begin_big_rate}</td>
                                         <td>{$item.begin_small_rate}</td>
                                         <td>{$item.change_rate}</td>
                                         <td>{$item.change_big_rate}</td>
